# ChangeLog for dev-perl/SRU
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SRU/ChangeLog,v 1.2 2009/11/22 10:51:35 robbat2 Exp $

*SRU-0.98 (22 Nov 2009)

  22 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +SRU-0.98.ebuild:
  Version bump via perl-bump experimental tool.

*SRU-0.97 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +SRU-0.97.ebuild:
  Initial commit. Dep for EverGreen ILS.
