@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST SRU-0.97.tar.gz 35647 RMD160 2385b7a04a11e688726f5e50cd72f0292a67b0ca SHA1 34b17b72bb9f3c7768fb12ec83315f8d1dec1868 SHA256 0aae984b2e704a4afcc2991f6bc8ad961593c418bd223eb2c8b7434e9e874206
 DIST SRU-0.98.tar.gz 33179 RMD160 54cffb58b07657cbafc728374ef041b075c88ca2 SHA1 94d06f6409d090f9f96497a0bef6878ed224f1a3 SHA256 4df147de19b18ad8e6295c20f1251c3d115d2778b3087e72cfa955ab920de68f
+DIST SRU-0.99.tar.gz 33201 RMD160 50d32079c56f905ec9ddfe1d41b1370a88f051e9 SHA1 a1f6a81e55629752a038d976e258009ed037a072 SHA256 d0bec8a2871378a254f5a45035685fc273dca7e0b2f9c7bb82d14999bab325f5
 EBUILD SRU-0.97.ebuild 550 RMD160 850cf07818e0906861f28ef0deeace8c67adcf85 SHA1 0fd060b1292fa6204aa96c554bf54ff1512f04f5 SHA256 535cce424d186254701f812794ab8dc00fe6f53f94aa120698898342e4dbb123
 EBUILD SRU-0.98.ebuild 550 RMD160 8d2234b28aa3cd7a2fcfc5d37b8feb6f16c2970a SHA1 1396398b6f2ae8d1ed43854794537237d528be62 SHA256 44f566f000843880bf0d90b8aa8c7d45d1b9790d2d76d8c14f2d017cdcae1562
-MISC ChangeLog 498 RMD160 d201359510abdae6aee6cc6778de567728e14fb3 SHA1 1a6adcf90410a1f0f2f84bbd0380752596a51bc4 SHA256 a2d838013965d3f29e6d3183301f4430cf4a1378b205aaaf7b8e7879e83c1e9e
+EBUILD SRU-0.99.ebuild 574 RMD160 f5ab6f8a1ced233350e282d998e583bb77716167 SHA1 a77758b2748d3439fef285632d8992fda6aeecf8 SHA256 289addcb51bf65eddf7a54e259b2701b196fb06501aaafcf9328a49391c6cc70
+MISC ChangeLog 602 RMD160 fc9c59295752644322b89a22fd5d874c9d3e019e SHA1 facebf76176ba959dbad1729020aae04b4bc25c2 SHA256 444634f7c9f4ed8ae6826c7235dfacf591bd1022918e0b9efc6f0dd02d2a96bf
 MISC metadata.xml 271 RMD160 33d1e6d38b3ecde19f2a3a873476e4fc03fd0a41 SHA1 1b49b2ba691f42cbf4f86231769f560b7232453a SHA256 0670df6d1cf19fc80b5a9b574234d0d260f42c2c1889155d94922b0d63976ac2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAksgq0wACgkQV3J2n04EauwSAgCdGqRAfocSXMegmX0WIOoNmR5p
+AssAnjMBI1k5ggvgGH9wJ1rZv5CXo5c/
+=LJMB
+-----END PGP SIGNATURE-----
