@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/SRU
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SRU/ChangeLog,v 1.2 2009/11/22 10:51:35 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SRU/ChangeLog,v 1.3 2009/12/10 08:03:18 tove Exp $
+
+*SRU-0.99 (10 Dec 2009)
+
+  10 Dec 2009; Torsten Veller <tove@gentoo.org> +SRU-0.99.ebuild:
+  Version bump
 
 *SRU-0.98 (22 Nov 2009)
 
